--- a/index.html
+++ b/index.html
@@ -13,13 +13,75 @@
     <title>Frontend Mentor | Intro component with sign up form</title>
   </head>
   <body>
-    <!-- Learn to code by watching others See how experienced developers solve
-    problems in real-time. Watching scripted tutorials is great, but
-    understanding how developers think is invaluable. Try it free 7 days then
-    $20/mo. thereafter First Name Last Name Email Address Password Claim your
-    free trial By clicking the button, you are agreeing to our Terms and
-    Services -->
-
-
+    <main>
+      <article>
+        <h1>Learn to code by watching others</h1>
+        <p>
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how developers think is
+          invaluable.
+        </p>
+      </article>
+      <article>
+        <div class="trialinfo">
+          <p><span>Try it free 7 days</span> then $20/mo. thereafter</p>
+        </div>
+        <form class="signupform">
+          <div class="inputcontainer" id="fnameinputcontainer">
+            <input type="text" id="firstname" placeholder="First Name" />
+            <img
+              src="./assets/images/icon-error.svg"
+              alt="error icon"
+              class="erroricon"
+              id="fnameerroricon"
+            />
+          </div>
+          <p class="errormessage" id="fnameerror">First Name cannot be empty</p>
+          <div class="inputcontainer" id="lnameinputcontainer">
+            <input type="text" id="lastname" placeholder="Last Name" />
+            <img
+              src="./assets/images/icon-error.svg"
+              alt="error icon"
+              class="erroricon"
+              id="lnameerroricon"
+            />
+          </div>
+          <p class="errormessage" id="lnameerror">Last Name cannot be empty</p>
+          <div class="inputcontainer" id="emailinputcontainer">
+            <input type="email" id="email" placeholder="Email Address" />
+            <img
+              src="./assets/images/icon-error.svg"
+              alt="error icon"
+              class="erroricon"
+              id="emailerroricon"
+            />
+          </div>
+          <p class="errormessage" id="emailerror">
+            Looks like this is not an email
+          </p>
+          <div class="inputcontainer" id="passwordinputcontainer">
+            <input type="password" id="password" placeholder="Password" />
+            <img
+              src="./assets/images/icon-error.svg"
+              alt="error icon"
+              class="erroricon"
+              id="passworderroricon"
+            />
+          </div>
+          <p class="errormessage" id="passworderror">
+            Password cannot be empty
+          </p>
+          <button
+            type="button"
+            id="submitbutton"
+          >Claim your free trial</button>
+          <p class="tandcs">
+            By clicking the button, you are agreeing to our
+            <a href="#">Terms and Services</a>
+          </p>
+        </form>
+      </article>
+    </main>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
